--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,10 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+.canvas-node-content.markdown-embed>.markdown-embed-content>.markdown-preview-view {
+    padding: 0 0 0 16px;
+}
+
+.markdown-source-view.mod-inside-iframe>.cm-editor>.cm-scroller {
+    padding: 0 0 0 16px;
+}
