自动宽高的优化
修复:
- 如果存在链接等元素,就手动调整宽高
- 优化了css,让右边空白宽度更合理一点
新特性:
- 设置里添加自动调整宽高的开关

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@ If your plugin does not need CSS, delete this file.
 
 */
 .canvas-node-content.markdown-embed>.markdown-embed-content>.markdown-preview-view {
-    padding: 0 0 0 16px;
+    padding-right: calc(16px - var(--scrollbar-width, 0px));
 }
 
 .markdown-source-view.mod-inside-iframe>.cm-editor>.cm-scroller {
-    padding: 0 0 0 16px;
+    padding-right: calc(16px - var(--scrollbar-width, 0px));
 }
